--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://iampurvang5.github.io/Text-Analyzer",
-  "name": "my-app",
+  "homepage": "https://iampurvang5.github.io/my-app/",
+  "name": "quiz-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
