--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iampurvang5.github.io/my-app/",
+  "homepage": "https://iampurvang5.github.io/my-app",
   "name": "quiz-app",
   "version": "0.1.0",
   "private": true,
